Add pid and timestamp prefix